# gate-detection-and-motion-planning

dev_ws/src/gate_detection/: package.xml  setup.cfg  setup.py
dev_ws/src/gate_detection/gate_detection/: simple_publisher.py
dev_ws/src/image_enhancement/: package.xml  setup.cfg  setup.py
dev_ws/src/image_enhancement/image_enhancement/: enhancer.py  simple_publisher.py
dev_ws/src/motion_planning/: package.xml  setup.py
dev_ws/src/motion_planning/motion_planning/: simple_subscriber.py
dev_ws/src/motion_planning_cpp/: CMakeLists.txt  member_function.cpp  package.xml
