<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>image_enhancement</name>
  <version>0.6.3</version>
  <description>subscribing to raw frames, process with GANS, and publish to object detection and target analysis nodes.</description>

  <maintainer email="gadm43@yahoo.com">Gad Mohamed</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
